tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__ClayTheGathering-AAAAAAAAAAAAAAAAAAAAFQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 21,
  "prerequisites": [
    15
  ],
  "properties": {
    "auto_claim": false,
    "desc": "While bored, you thought that it might be a good idea to take up pottery. You should go and find some clay, the riverbanks should have some.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lClay: The Gathering",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15
  ],
  "rewards": [],
  "tasks": []
}
