tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__CopperSkyIronCur-AAAAAAAAAAAAAAAAAAAAHA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 28,
  "prerequisites": [
    27
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With your newly acquired fuel source, you are now ready to process more advanced materials than stone or clay; Iron or Copper, for example. Just in case you don't know, they spawn in rather large veins. Use the following quests to locate the most important veins.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lCopper Sky, Iron Curtain",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    27
  ],
  "rewards": [],
  "tasks": []
}
