tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__DivineRodoftheGo-AAAAAAAAAAAAAAAAAAAF4A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1504,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Ore Finder Wand reduces the tedium of locating needed veins. If you're not sure how to craft Magnetic Iron Rod for it, check its Shapeless Crafting tab in NEI.\n\nOnce you put an ore sample into the wand, it will tell you if this ore is nearby. When you get close to the target, you will hear the sound, and the wand will tilt down to the point of being upside-down if there's a lot of target ore nearby.\n\nUse NEI to figure out which ore is the best for your search. If you don't have the needed ore, some basic ones can be purchased in the Coins tab.\n\nOpen the wand's inventory with Shift+RMB when looking at the ground. Put the sample ore into the slot.\nThe rod has a 60-block range both up and down, so it can miss a vein that is located very low or if you are above the sea level.\n\nThe rod appears to work based on the GT's Material system, so anything of the same material will work.\nThat includes crushed ores, dusts, ingots, gems, rods, you name it. For things that don't belong to a particular Material, the rod appears to search only for that exact block - for instance, you won't detect small ores with the usual ore block.\n\nIf the detected ore is a part of a vein, you will see a discovery message in the chat, and the vein will be automatically logged into the visual prospecting tab of your journey map.\n\nThe wand also works from inventory and hotbar, so you don't need to be actively holding it, but you get style points if you do.\n\nThe ore in the wand is stored with the player, not the wand. In other words, remove the ore if you want to give the wand to your teammate.\n\nThe Ore Finder Wand doesn't work in space! The vast cosmic energies of the sun interfere with its inner workings! Or the devs want you to use something more complicated than a stick. You choose.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§2§lDivine Rod of the Gods?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
