tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__DoYouReallyNeedT-4g20EVdxSWyOUMhZXkcIWQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6300898083455043673,
  "prerequisites": [
    488
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are many more backpacks: Coiners, thaumaturges, trackmanns...\n\n[note]Hint: Scroll to the Bottom[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§2§lDo You Really Need Them All?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    488
  ],
  "rewards": [],
  "tasks": []
}
